Feat(auth): harden RBAC rules and JWT authorities