@@ -1,7 +1,7 @@
 package com.social.auth.infrastructure.security;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -10,10 +10,11 @@ import jakarta.servlet.http.HttpServletResponse;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.context.SecurityContextHolder;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -35,13 +36,23 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring(7).trim();
             try {
-                if (jwtService.validateToken(token)) {
-                    String subject = jwtService.getSubject(token); // thường là user id
+                if (jwtService.validateToken(token)
+                        && SecurityContextHolder.getContext().getAuthentication() == null) {
+
+                    String subject = jwtService.getSubject(token);
+                    String role = jwtService.getRole(token);
+                    String authority = role.startsWith("ROLE_") ? role : "ROLE_" + role;
+
                     UsernamePasswordAuthenticationToken auth =
-                            new UsernamePasswordAuthenticationToken(subject, null, Collections.emptyList());
+                            new UsernamePasswordAuthenticationToken(
+                                    subject,
+                                    null,
+                                    List.of(new SimpleGrantedAuthority(authority))
+                            );
+
                     SecurityContextHolder.getContext().setAuthentication(auth);
                 } else {
-                    log.debug("JWT validation failed for token: {}", token);
+                    log.debug("JWT validation failed for token");
                 }
             } catch (Exception ex) {
                 log.debug("Error validating JWT", ex);
